--- a/index.html
+++ b/index.html
@@ -1,81 +1,62 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Always and Forever 💖</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(135deg, #ffe6f0, #fff5f9);
-      text-align: center;
-      margin: 0;
-      padding: 20px;
-    }
+<meta charset="UTF-8">
+<title>Always and Forever 💖</title>
 
-    h1 {
-      color: #ff4d88;
-      margin-bottom: 10px;
-    }
+<style>
+body {
+  font-family: Arial, sans-serif;
+  background: linear-gradient(135deg, #ffe6f0, #fff5f9);
+  text-align: center;
+  padding: 20px;
+}
 
-    .card {
-      background: white;
-      padding: 20px;
-      border-radius: 20px;
-      margin: 20px auto;
-      width: 320px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-    }
+h1 { color: #ff4d88; }
 
-    button {
-      font-size: 28px;
-      margin: 6px;
-      border: none;
-      background: none;
-      cursor: pointer;
-      transition: transform 0.2s;
-    }
+.card {
+  background: white;
+  padding: 20px;
+  border-radius: 15px;
+  margin: 20px auto;
+  width: 320px;
+  box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+}
 
-    button:hover {
-      transform: scale(1.2);
-    }
+button {
+  font-size: 28px;
+  margin: 5px;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
 
-    #bouquet, #jar {
-      font-size: 40px;
-      min-height: 50px;
-      margin-top: 10px;
-    }
+button:hover {
+  transform: scale(1.2);
+}
 
-    textarea, input {
-      width: 90%;
-      padding: 8px;
-      margin-top: 10px;
-      border-radius: 10px;
-      border: 1px solid #ddd;
-    }
+#bouquet, #jar {
+  font-size: 40px;
+  min-height: 50px;
+}
 
-    .create-btn {
-      background: #ff4d88;
-      color: white;
-      padding: 10px 18px;
-      border-radius: 12px;
-      font-size: 16px;
-      margin-top: 15px;
-    }
+textarea, input {
+  width: 90%;
+  padding: 8px;
+  margin-top: 10px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+}
 
-    .final {
-      background: #fff;
-      padding: 20px;
-      border-radius: 20px;
-      margin-top: 20px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.15);
-    }
-
-    a {
-      color: #ff4d88;
-      text-decoration: none;
-      font-weight: bold;
-    }
-  </style>
+.create-btn {
+  background: #ff4d88;
+  color: white;
+  padding: 8px 15px;
+  border-radius: 10px;
+  font-size: 16px;
+  margin-top: 10px;
+}
+</style>
 </head>
 
 <body>
@@ -83,29 +64,28 @@
 <h1>Create a Gift 💖</h1>
 
 <div class="card">
-  <h3>Build Your Bouquet 💐</h3>
+  <h3>Build Bouquet 💐</h3>
   <button onclick="addFlower('🌹')">🌹</button>
   <button onclick="addFlower('🌷')">🌷</button>
   <button onclick="addFlower('🌸')">🌸</button>
   <button onclick="addFlower('🌻')">🌻</button>
-  <button onclick="clearBouquet()">❌</button>
   <div id="bouquet"></div>
 </div>
 
 <div class="card">
-  <h3>Fill Your Candy Jar 🍫</h3>
+  <h3>Fill Candy Jar 🍫</h3>
   <button onclick="addCandy('🍫')">🍫</button>
   <button onclick="addCandy('🍬')">🍬</button>
   <button onclick="addCandy('🍭')">🍭</button>
   <button onclick="addCandy('🤎')">🤎</button>
-  <button onclick="clearJar()">❌</button>
   <div id="jar"></div>
 </div>
 
 <div class="card">
-  <h3>Add Your Message 💌</h3>
+  <h3>Add Message 💌</h3>
   <textarea id="message" placeholder="Write something special..."></textarea>
-  <input id="song" placeholder="Paste Spotify/YouTube link 🎵">
+  <input id="song" placeholder="Paste song link 🎵">
+  <br>
   <button class="create-btn" onclick="createGift()">Create Gift</button>
 </div>
 
@@ -120,28 +100,20 @@ function addCandy(candy) {
   document.getElementById("jar").innerHTML += candy;
 }
 
-function clearBouquet() {
-  document.getElementById("bouquet").innerHTML = "";
-}
-
-function clearJar() {
-  document.getElementById("jar").innerHTML = "";
-}
-
 function createGift() {
-  const bouquet = document.getElementById("bouquet").innerHTML;
-  const jar = document.getElementById("jar").innerHTML;
-  const message = document.getElementById("message").value;
-  const song = document.getElementById("song").value;
+  var bouquet = document.getElementById("bouquet").innerHTML;
+  var jar = document.getElementById("jar").innerHTML;
+  var message = document.getElementById("message").value;
+  var song = document.getElementById("song").value;
 
   document.getElementById("finalGift").innerHTML =
-  `<div class="final">
-    <h2>Your Gift 💖</h2>
-    <div style="font-size:40px">${bouquet}</div>
-    <div style="font-size:40px">${jar}</div>
-    <p>${message}</p>
-    <a href="${song}" target="_blank">🎵 Play Song</a>
-  </div>`;
+  "<div class='card'>" +
+  "<h2>Your Gift 💖</h2>" +
+  "<div style='font-size:40px'>" + bouquet + "</div>" +
+  "<div style='font-size:40px'>" + jar + "</div>" +
+  "<p>" + message + "</p>" +
+  "<a href='" + song + "' target='_blank'>🎵 Play Song</a>" +
+  "</div>";
 }
 </script>
 
